# ocaml-ctypes-cbuf

./: .depend  META  Makefile  README.md  ctypes.opam
.github/workflows/: test.yml
examples/cbuf/: README.md  bindgen.ml  bindings.ml  dune  example.c  example.h  example.ml
examples/cbuf_ip_addr_pton/: bindings.ml
examples/ip/: README.md  bench.csv  bench.ml  bindgen.ml  bindings.ml  cbuf_gen_sample.c  cstubs_gen_sample.ml  dune  ip.ml  ip_addr_pton.c  ip_addr_pton.h
src/cbuf/: cbuf.ml  cbuf.mli  cbuf_analysis.ml  cbuf_analysis.mli  cbuf_c_language.ml  cbuf_emit_c.ml  cbuf_errors.ml  cbuf_errors.mli  cbuf_generate_c.ml  cbuf_generate_c.mli  cbuf_generate_ml.ml  cbuf_generate_ml.mli  cbuf_internals.ml  cbuf_internals.mli  cbuf_inverted.ml  cbuf_inverted.mli  cbuf_path.ml  cbuf_public_name.ml  cbuf_public_name.mli  cbuf_static.ml  cbuf_structs.ml  cstubs_c_language.ml  cstubs_emit_c.ml  cstubs_generate_c.ml  cstubs_generate_ml.ml  cstubs_inverted.ml  dune
src/cstubs/: cstubs.ml  cstubs_analysis.ml  cstubs_c_language.ml  cstubs_generate_c.ml  cstubs_generate_ml.ml  cstubs_inverted.mli  cstubs_structs.ml  dune
src/ctypes/: cstubs_internals.ml  cstubs_internals.mli  ctypes.ml  ctypes.mli  ctypes_coerce.ml  ctypes_memory.ml  ctypes_ptr.ml  ctypes_static.ml  ctypes_static.mli  ctypes_structs_computed.ml  ctypes_type_printing.ml  ctypes_types.mli  ctypes_value_printing.ml  dune
