(library
 (name bindings)
 (libraries ctypes str)
 (modules bindings))

(executable
 (name bindgen)
 (libraries bindings ctypes.cbuf)
 (modules bindgen))

(rule
 (targets 
 cbuf_gen.c
 cbuf_gen.ml
 )
 (action
  (run ./bindgen.exe)))

; (library
;  (name cstubs_gen)
;  (libraries ctypes)
;  (modules cstubs_gen)
;  (foreign_stubs
;   (language c)
;   (names ip_addr_pton cstubs_gen)))

; (library
;  (name cbuf_gen)
;  (libraries ctypes generated)
;  (modules cbuf_gen))

(library
 (name cstubs_gen_sample)
 (libraries ctypes)
 (modules cstubs_gen_sample)
 (foreign_stubs
  (language c)
  (names ip_addr_pton cbuf_gen_c_sample)))

(executable
 (name ip)
 (libraries cstubs_gen_sample ctypes bindings)
 (modules ip))
