(library
 (name bindings)
 (libraries ctypes str)
 (modules bindings))

(executable
 (name bindgen)
 (libraries bindings ctypes.cbuf)
 (modules bindgen))

(rule
 (targets cbuf_gen.c cbuf_gen.ml)
 (action
  (run ./bindgen.exe)))

(library
 (name cbuf_gen)
 (libraries ctypes)
 (modules cbuf_gen)
 (foreign_stubs
  (language c)
  (names ip_addr_pton cbuf_gen)))

; (library
;  (name cstubs_gen_sample)
;  (libraries ctypes)
;  (modules cstubs_gen_sample)
;  (foreign_stubs
;   (language c)
;   (names ip_addr_pton cbuf_gen)))

(executable
 (name ip)
 (libraries cbuf_gen ctypes bindings)
 (modules ip))
